fix: fix content-z-index in example.

--- a/src/pages/css/index.css
+++ b/src/pages/css/index.css
@@ -23,7 +23,7 @@ body {
 
 .content {
   position: relative;
-  z-index: -1;
+  /* z-index: -1; */
   margin-top: 8rem;
   width: 100%;
 }
