--- a/src/pages/css/menue.css
+++ b/src/pages/css/menue.css
@@ -28,3 +28,6 @@
   background: #bdc3c7;
 }
 
+.bm-overlay {
+  top: 0;
+}
